<resources>
    <string name="app_name">PR-11_Gladunov</string>
    <string name="Registrr">Регистрация</string>
    <string name="Helpp">Помощь</string>
    <string name="loginn">Вход</string>
    <string name="cartoon_start">TODO</string>
    <string name="help_cartoon">TODO</string>
    <string name="Cartoon_login">TODO</string>
    <string name="Registr_button">Button</string>
    <string name="Registr_buttonn">Зарегестрироваться</string>
    <string name="name">Введите ваше имя</string>
    <string name="secondname">Введите вашу фамилию</string>
    <string name="number">Введите ваш контактный номер</string>
    <string name="zapolnenie">TODO</string>
    <string name="zapolnenie1">TODO</string>
    <string name="zapolnenie2">TODO</string>
    <string name="politic">Согласен(-а) с условиями использования и политикой конфиденциальности</string>
    <string name="accept">TODO</string>
    <string name="image_secondactivity">TODO</string>
    <string name="info">Подробная информация</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo2">TODO</string>
    <string name="search_friends">Найти друзей</string>
    <string name="уведомления">Включить уведомления</string>
    <string name="todo8">TODO</string>
    <string name="robert_fox">Robert Fox</string>
    <string name="elizabeth">Elizabeth</string>
    <string name="sister">Sister</string>
    <string name="carolina">Carolina</string>
    <string name="kseniia">Kseniia</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="w">Предложения</string>
    <string name="ww">Сергей, приветствуем в нашем приложении</string>
    <string name="ss">TODO</string>
    <string name="dd">TODO</string>
</resources>